@@ -6,6 +6,7 @@
 	<p>
 		<center><img src='/site-media/images/networked-learning.jpg'/></center>
 	</p>
+	<p>&nbsp;</p>
 	<p>
 		Adaptive Learning Online is a website for everyone who is interested in learning Computer Science related topics. We provide information and interactions for learning.
 	</p>
