@@ -3,54 +3,84 @@
 {% endblock %}
 {% block content %}
 <div class="link-theme-static">
-<h3 class="policy-header">Privacy Policy</h3>
-Your privacy is critically important to us. At Adaptive Software Solutions we have a few fundamental principles:</p>
-<ul>
-	<li>We don’t ask you for personal information unless we truly need it. (We can’t stand services that ask you for things like your gender or income level for no apparent reason.)</li>
-	<li>We don’t share your personal information with anyone except to comply with the law, develop our products, or protect our rights.</li>
-	<li>We don’t store personal information on our servers unless required for the on-going operation of one of our services.</li>
-	<li>We aim to make it as simple as possible for you to control what’s visible to the public, seen by search engines, kept private, and permanently deleted.</li>
-</ul>
-<p>
-Below is our privacy policy which incorporates these goals:
-</p>
-<p>
-Adaptive Software Solutions operates several websites including <a href="http://adaptivesoftware.biz">adaptivesoftware.biz</a>, <a href="http://blog.adaptivesoftware.biz">blog.adaptivesoftware.biz</a>, <a href="http://adaptivelearningonline.net">adaptivelearningonline.net</a>, and it's subdomains. It is Adaptive Software Solutions' policy to respect your privacy regarding any information we may collect while operating our websites.
-</p>
-<p>
-<h3>Website Visitors</h3>
-Like most website operators, Adaptive Software Solutions collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Adaptive Software Solution’s purpose in collecting non-personally identifying information is to better understand how Adaptive Software Solution’s visitors use its website. From time to time, Adaptive Software Solutions may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.
-</p>
-<p>
+	<div>
+		<h3 class="policy-header">Privacy Policy</h3>
+			Your privacy is critically important to us. At Adaptive Software Solutions we have a few fundamental principles:
+		<ul>
+			<li>We don’t ask you for personal information unless we truly need it. (We can’t stand services that ask you for things like your gender or income level for no apparent reason.)</li>
+			<li>We don’t share your personal information with anyone except to comply with the law, develop our products, or protect our rights.</li>
+			<li>We don’t store personal information on our servers unless required for the on-going operation of one of our services.</li>
+			<li>We aim to make it as simple as possible for you to control what’s visible to the public, seen by search engines, kept private, and permanently deleted.</li>
+		</ul>
+	</div>
+	<div>
+		<p>
+			<strong>Below is our privacy policy which incorporates these goals:</strong>
+		</p>
+	</div>
+	<div>
+		Adaptive Software Solutions operates several websites including <a href="http://adaptivesoftware.biz">adaptivesoftware.biz</a>, <a href="http://blog.adaptivesoftware.biz">blog.adaptivesoftware.biz</a>, <a href="http://adaptivelearningonline.net">adaptivelearningonline.net</a>, and it's subdomains. It is Adaptive Software Solutions' policy to respect your privacy regarding any information we may collect while operating our websites.
+	</div>
+	<div>
+		<p>
+		<h3>Website Visitors</h3>
+		</p>
+		<p>
+			Like most website operators, Adaptive Software Solutions collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Adaptive Software Solution’s purpose in collecting non-personally identifying information is to better understand how Adaptive Software Solution’s visitors use its website. From time to time, Adaptive Software Solutions may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.
+		</p>
+		<p>
 Adaptive Software Solutions also collects potentially personally-identifying information like Internet Protocol (IP) addresses. Adaptive Software Solutions does not use such information to identify its visitors, however, and does not disclose such information, other than under the same circumstances that it uses and discloses personally-identifying information, as described below.
-</p>
-<p>
-<h3>Gathering of Personally-Identifying Information</h3>
-<p>
+		</p>
+	</div>
+	<div>
+		<p>
+		<h3>Gathering of Personally-Identifying Information</h3>
+		</p>
+		<p>
 Certain visitors to Adaptive Software Solutions' websites choose to interact with Adaptive Software Solutions in ways that require Adaptive Software Solutions to gather personally-identifying information. The amount and type of information that Adaptive Software Solutions gathers depends on the nature of the interaction. For example, we ask visitors who sign up for an account at <a href="http://adaptivelearningonline.net">adaptivelearningonline.net</a> to provide a username and email address. In each case, Adaptive Software Solutions collects such information only insofar as is necessary or appropriate to fulfill the purpose of the visitor’s interaction with Adaptive Software Solutions. Adaptive Software Solutions does not disclose personally-identifying information other than as described below. And visitors can always refuse to supply personally-identifying information, with the caveat that it may prevent them from engaging in certain website-related activities.
-</p>
-<p>
-<h3>Aggregated Statistics</h3>
-Adaptive Software Solutions may collect statistics about the behavior of visitors to its websites. For instance, Adaptive Software Solutions may display this information publicly or provide it to others. However, Adaptive Software Solutions does not disclose personally-identifying information other than as described below.
-</p>
-<p>
-<h3>Protection of Certain Personally-Identifying Information</h3>
-Adaptive Software Solutions discloses potentially personally-identifying and personally-identifying information only to those of its employees, contractors and affiliated organizations that (i) need to know that information in order to process it on Adaptive Software Solution’s behalf or to provide services available at Adaptive Software Solution’s websites, and (ii) that have agreed not to disclose it to others. Some of those employees, contractors and affiliated organizations may be located outside of your home country; by using Adaptive Software Solutions' websites, you consent to the transfer of such information to them. Adaptive Software Solutions will not rent or sell potentially personally-identifying and personally-identifying information to anyone. Other than to its employees, contractors and affiliated organizations, as described above, Adaptive Software Solutions discloses potentially personally-identifying and personally-identifying information only when required to do so by law, or when Adaptive Software Solutions believes in good faith that disclosure is reasonably necessary to protect the property or rights of Adaptive Software Solutions, third parties or the public at large. If you are a registered user of an Adaptive Software Solutions website and have supplied your email address, Adaptive Software Solutions may occasionally send you an email to tell you about new features, solicit your feedback, or just keep you up to date with what’s going on with Adaptive Software Solutions and our products. We primarily use our various product blogs to communicate this type of information, so we expect to keep this type of email to a minimum. If you send us a request (for example via a support email or via one of our feedback mechanisms), we reserve the right to publish it in order to help us clarify or respond to your request or to help us support other users. Adaptive Software Solutions takes all measures reasonably necessary to protect against the unauthorized access, use, alteration or destruction of potentially personally-identifying and personally-identifying information.
-</p>
-<p>
-<h3>Cookies</h3>
-A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Adaptive Software Solutions uses cookies to help Adaptive Software Solutions identify and track visitors, their usage of Adaptive Software Solutions website, and their website access preferences. Adaptive Software Solutions visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Adaptive Software Solutions' websites, with the drawback that certain features of Adaptive Software Solutions websites may not function properly without the aid of cookies.
-</p>
-<p>
-<h3>Ads</h3>
-Ads appearing on any of our websites may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by Adaptive Software Solutions and does not cover the use of cookies by any advertisers.
-</p>
-<p>
-<h3>Privacy Policy Changes</h3>
-Although most changes are likely to be minor, Adaptive Software Solutions may change its Privacy Policy from time to time, and in Adaptive Software Solutions’ sole discretion. Adaptive Software Solutions encourages visitors to frequently check this page for any changes to its Privacy Policy. If you have a adaptivelearningonline.net account, you should also check your dashboard for alerts to these changes. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.
-</p>
-<p class="wordpress_attribution">
-<strong>Attribution:</strong> This document ia adapted from a similar document provided by <a href="http://www.wordpress.com">Wordpress.com</a>. Many thanks to Automattic Inc. for making the <a href="http://automattic.com/privacy/">document</a> available on a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons</a> license. 
-</p>
+		</p>
+	</div>
+	<div>
+		<h3>Aggregated Statistics</h3>
+			<p>
+			Adaptive Software Solutions may collect statistics about the behavior of visitors to its websites. For instance, Adaptive Software Solutions may display this information publicly or provide it to others. However, Adaptive Software Solutions does not disclose personally-identifying information other than as described below.
+			</p>
+	</div>
+	<div>
+		<p>
+			<h3>Protection of Certain Personally-Identifying Information</h3>
+		</p>
+		<p>
+			Adaptive Software Solutions discloses potentially personally-identifying and personally-identifying information only to those of its employees, contractors and affiliated organizations that (i) need to know that information in order to process it on Adaptive Software Solution’s behalf or to provide services available at Adaptive Software Solution’s websites, and (ii) that have agreed not to disclose it to others. Some of those employees, contractors and affiliated organizations may be located outside of your home country; by using Adaptive Software Solutions' websites, you consent to the transfer of such information to them. Adaptive Software Solutions will not rent or sell potentially personally-identifying and personally-identifying information to anyone. Other than to its employees, contractors and affiliated organizations, as described above, Adaptive Software Solutions discloses potentially personally-identifying and personally-identifying information only when required to do so by law, or when Adaptive Software Solutions believes in good faith that disclosure is reasonably necessary to protect the property or rights of Adaptive Software Solutions, third parties or the public at large. If you are a registered user of an Adaptive Software Solutions website and have supplied your email address, Adaptive Software Solutions may occasionally send you an email to tell you about new features, solicit your feedback, or just keep you up to date with what’s going on with Adaptive Software Solutions and our products. We primarily use our various product blogs to communicate this type of information, so we expect to keep this type of email to a minimum. If you send us a request (for example via a support email or via one of our feedback mechanisms), we reserve the right to publish it in order to help us clarify or respond to your request or to help us support other users. Adaptive Software Solutions takes all measures reasonably necessary to protect against the unauthorized access, use, alteration or destruction of potentially personally-identifying and personally-identifying information.
+		</p>
+	</div>
+	<div>
+		<p>
+			<h3>Cookies</h3>
+		</p>
+		<p>
+			A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Adaptive Software Solutions uses cookies to help Adaptive Software Solutions identify and track visitors, their usage of Adaptive Software Solutions website, and their website access preferences. Adaptive Software Solutions visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Adaptive Software Solutions' websites, with the drawback that certain features of Adaptive Software Solutions websites may not function properly without the aid of cookies.
+		</p>
+	</div>
+	<div>
+		<p>
+			<h3>Ads</h3>
+		</p>
+		<p>
+			Ads appearing on any of our websites may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by Adaptive Software Solutions and does not cover the use of cookies by any advertisers.
+		</p>
+	</div>
+	<div>
+		<p>
+		<h3>Privacy Policy Changes</h3>
+		</p>
+		<p>
+			Although most changes are likely to be minor, Adaptive Software Solutions may change its Privacy Policy from time to time, and in Adaptive Software Solutions’ sole discretion. Adaptive Software Solutions encourages visitors to frequently check this page for any changes to its Privacy Policy. If you have a adaptivelearningonline.net account, you should also check your dashboard for alerts to these changes. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.
+		</p>
+	</div>
+	<div>
+<h3>Attribution:</h3> 
+This document ia adapted from a similar document provided by <a href="http://www.wordpress.com">Wordpress.com</a>. Many thanks to Automattic Inc. for making the <a href="http://automattic.com/privacy/">document</a> available on a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons</a> license. 
+	</div>
 </div>
 {% endblock %}
