@@ -2,14 +2,20 @@
 {% block header %}
 {% endblock %}
 {% block content %}
-<div>
-<h3 class="policy-header">Terms of Service</h3>
-</div>
 <div class="link-theme-static">
-<h3>The gist:</h3>
-
-<p>Adaptive Software Solutions welcomes you to the Adaptive Learning Online network and asks you to review and agree to the Terms Of Service Agreement. The Adaptive Learning Online network consists of but is not limited to adaptivelearningonline.net, all the subdomains of adaptivelearningonline.net, the forums provided through these websites. Our aim is to provide a service which will help you learn various topics related to computer science. Our basic service is free. Our service is designed to give you as much control and ownership of your learning process as possible and encourage you to express yourself freely. However, be responsible in what you write. In particular, make sure that none of the prohibited items listed below appear on what you post on this website.</a>
-
+<div>
+	<p>
+		<h3 class="policy-header">Terms of Service</h3>
+	</p>
+</div>
+<div>
+	<p>
+		<h3>The gist:</h3>
+	</p>
+</div>
+<div>
+<p>Adaptive Software Solutions welcomes you to the Adaptive Learning Online network and asks you to review and agree to the Terms Of Service Agreement. The Adaptive Learning Online network consists of but is not limited to adaptivelearningonline.net, all the subdomains of adaptivelearningonline.net, the forums provided through these websites. Our aim is to provide a service which will help you learn various topics related to computer science. Our basic service is free. Our service is designed to give you as much control and ownership of your learning process as possible and encourage you to express yourself freely. However, be responsible in what you write. In particular, make sure that none of the prohibited items listed below appear on what you post on this website.</p>
+</div>
 <p>If you find any content on this website that you believe violates our terms of service, please mail to admin@adaptivelearningonline.net</p>
 
 <h3>Terms of Service:</h3>
