@@ -14,6 +14,7 @@ theme = {'body_fg':themecolor['gray_666'],
 				 'nav_main_a_hover':themecolor['red_pink_ec665d'],
 				 'h2_color':themecolor['dark_blue'],
 				 'sidebar_a_hover':themecolor['saphire'],
+				 'sidebar_background_color':'#BDDDED',
 				 'footer_fg':themecolor['white'],
 				 'footer_bg':themecolor['royal_blue'],
 				 'footer_a_link':themecolor['white'],
@@ -25,6 +26,7 @@ theme = {'body_fg':themecolor['gray_666'],
 				 'course_listing_a_hover':themecolor['green_269926'],
 				 'course_name':themecolor['blue_266fad'],
 				 'topic_name':themecolor['blue_266fad'],
+				 'course_listing_heading__background_color':'#BDDDED',
 				 'course_description_a_visited':themecolor['skyblue_4eafae'],
 				 'course_description_a_link':themecolor['skyblue_4eafae'],
 				 'course_description_a_hover':themecolor['blue_266fad'],
